panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__join-lines__test_joining_tokens.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/join-lines/test_joining_tokens.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/join-lines/test_joining_tokens.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello world")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello world")))
         (declaration value~3 `int` 42)
         (return (name value~3 `int`)))))

----- stderr -----
